<resources>
    <string name="app_name">Horóscopo</string>

    <string name="text_aries">Áries</string>
    <string name="text_taurus">Touro</string>
    <string name="text_gemini">Gêmeos</string>
    <string name="text_cancer">Câncer</string>
    <string name="text_leo">Leão</string>
    <string name="text_virgo">Virgem</string>
    <string name="text_libra">Libra</string>
    <string name="text_scorpio">Escorpião</string>
    <string name="text_sagittarius">Sagitário</string>
    <string name="text_capricorn">Capricórnio</string>
    <string name="text_aquarius">Aquário </string>
    <string name="text_pisces">Peixes</string>

    <string name="text_url_origin">Origem da URL</string>
    <string name="text_source">Fonte</string>
    <string name="text_no_internet_connection">Sem conexão com a internet!</string>
    <string name="text_try_again">Tentar novamente</string>

</resources>
