<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/table_zodiac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/table_zodiac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--0-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_table_row"
            android:layout_marginBottom="16dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_aries"
                    android:src="@drawable/ic_aries_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_aries" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_taurus"
                    android:src="@drawable/ic_taurus_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_taurus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_gemini"
                    android:src="@drawable/ic_gemini_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_gemini" />

            </LinearLayout>

        </TableRow>

        <!--1-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_table_row"
            android:layout_marginBottom="16dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_cancer"
                    android:src="@drawable/ic_cancer_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_cancer" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_leo"
                    android:src="@drawable/ic_leo_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_leo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_virgo"
                    android:src="@drawable/ic_virgo_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_virgo" />

            </LinearLayout>

        </TableRow>

        <!--2-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_table_row"
            android:layout_marginBottom="16dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_libra"
                    android:src="@drawable/ic_libra_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_libra" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_scorpio"
                    android:src="@drawable/ic_scorpio_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_scorpio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_sagittarius"
                    android:src="@drawable/ic_sagittarius_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_sagittarius" />

            </LinearLayout>

        </TableRow>

        <!--3-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_table_row"
            android:layout_marginBottom="16dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_capricorn"
                    android:src="@drawable/ic_capricorn_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_capricorn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_aquarius"
                    android:src="@drawable/ic_aquarius_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_aquarius" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:background="@color/bg_icon_zodiac"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text_pisces"
                    android:src="@drawable/ic_pisces_89dp"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_pisces" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
